# nokia-recruitment

./: CMakeLists.txt  README.md  main.cpp
googletest-master/: CONTRIBUTING.md
googletest-master/googlemock/docs/: cook_book.md
googletest-master/googletest/include/gtest/internal/: gtest-port.h
googletest-master/googletest/src/: gtest-death-test.cc  gtest-port.cc  gtest.cc
include/: DataLoader.h  InvalidExpressionError.h  Node.h  PrefixExpression.h
src/: DataLoader.cpp  Node.cpp  PrefixExpression.cpp
tests/: DataLoaderTest.cpp  NodeTest.cpp  PrefixExpressionTest.cpp  main_test.cpp
